# ChangeLog for media-libs/giflib
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/giflib/ChangeLog,v 1.71 2013/10/19 05:51:56 vapier Exp $

  19 Oct 2013; Mike Frysinger <vapier@gentoo.org> giflib-4.2.3.ebuild:
  Fix building w/automake-1.13 #486542 by Arfrever Frehtes Taifersar Arahesis.

*giflib-4.2.3 (27 Sep 2013)

  27 Sep 2013; Tim Harder <radhermit@gentoo.org> +giflib-4.2.3.ebuild:
  Version bump.

  06 Jul 2013; Christoph Junghans <ottxor@gentoo.org> giflib-4.1.6-r2.ebuild,
  giflib-5.0.4.ebuild:
  added prefix keywords

  12 Mar 2013; Mike Frysinger <vapier@gentoo.org> giflib-5.0.4.ebuild:
  Drop epunt_cxx as we no longer need it here.

*giflib-5.0.4 (23 Jan 2013)

  23 Jan 2013; Mike Frysinger <vapier@gentoo.org> +giflib-5.0.4.ebuild,
  -giflib-5.0.2.ebuild, -giflib-5.0.3.ebuild:
  Version bump #453686 by Agostino Sarubbo.

*giflib-5.0.3 (06 Jan 2013)

  06 Jan 2013; Mike Frysinger <vapier@gentoo.org> +giflib-5.0.3.ebuild:
  Version bump #450566 by Agostino Sarubbo.

*giflib-5.0.2 (30 Dec 2012)

  30 Dec 2012; Mike Frysinger <vapier@gentoo.org> +giflib-5.0.2.ebuild:
  Version bump -- masked until testing in the tree is finished #423393 by Peter
  Alfredsen.

  09 May 2012; Alexis Ballier <aballier@gentoo.org> giflib-4.1.6-r2.ebuild:
  keyword ~amd64-fbsd

*giflib-4.1.6-r2 (17 Jul 2011)

  17 Jul 2011; Tomáš Chvátal <scarabeus@gentoo.org> -giflib-4.1.6-r1.ebuild,
  +giflib-4.1.6-r2.ebuild:
  Revision bump to add back .la file when using static libs. Preserve the
  stable keywords as the former change might break stable static builds only.
  Fixes bug #371173.

  12 Jun 2011; Tomáš Chvátal <scarabeus@gentoo.org> giflib-4.1.6-r1.ebuild:
  Introduce (add back) optional support for static libraries as per bug
  #371173.

  05 May 2011; Tomáš Chvátal <scarabeus@gentoo.org> giflib-4.1.6-r1.ebuild:
  Punt static library and .la file archive.
