@@ -6,25 +6,21 @@ AUX giflib-4.1.6-giffix-null-Extension-fix.patch 693 SHA256 fbbe6cdb82837b5791e9
 DIST giflib-4.1.6.tar.bz2 506050 SHA256 e1c1ced9c5bc8f93ef0faf0a8c7717abf784d10a7b270d2285e8e1f3b93f2bed SHA512 f47954218ed7d3415cc195a1031a688fcb7dd2bc2b394491830e6b5f5332903ed7c4433b795cd3da9ac53bfc969fe94bec2a4e66b15c0385c732c01b1b7e5057 WHIRLPOOL ee5c3c606dcc2a56151cfd8f9ec33ce6071fb433969df92fae5d51def5bdf974f6dcdb1acf7d83234967f0f5fd3822702822e1e6b274c2e6c39e3e324b54fe09
 DIST giflib-4.2.3.tar.bz2 560968 SHA256 0ac8d56726f77c8bc9648c93bbb4d6185d32b15ba7bdb702415990f96f3cb766 SHA512 f582fafa3ccb0f9ae6f040df0e33469a26fb275437f8615c39af613523ef5f3b09003ed3419f62880200606edfbe08b5aa3ba18a4d615ecd8da27331aec16b36 WHIRLPOOL b23ef64d227eb5219a9a1143cdafea6cb0aea12409fc18a686d5bf2d5241f97ac1c8f8bb76b0c99a5fd60fcff45fc092a2226a6b54ee24a2ec3841765a102447
 DIST giflib-5.0.4.tar.bz2 629190 SHA256 7c78b2834256fcb7ff703d0d2153f965dc296f8e059de1fc635aba1042b00bba SHA512 057c7754a7169a8690d03b39e084626355e907dcc0644473da1ebe6c6f36c7d991a477c0b22d258bdbceafe473bab585bca57fa9bf4d9c0c4d7ebbe920bea83f WHIRLPOOL 91aad640c43581b9ff0daef2e8e909414419451590bbc372943275558724513cd3b1f081dc202498670c7d18cb22b48e067c79a157da6f597c8c56c737e07231
+DIST giflib-5.0.5.tar.bz2 651559 SHA256 606d8a366b1c625ab60d62faeca807a799a2b9e88cbdf2a02bfcdf4429bf8609 SHA512 3b8a5e3bd3ecd324073a635f76fbea218392644d11ca13918631a82339b3ef4567c57666ef777f684e3e81f39f04d8741e0973a538352f5bd17f5f15535a45c2 WHIRLPOOL 9fabcdbbee9dc08e17da7da6dabc61ca965ab631754f6f20c54953bb3b0f7763f6d0dc572c649e6ae9834bbcc03955aedee0ef6f2e0e09ec4e5bc46e223727ef
 EBUILD giflib-4.1.6-r2.ebuild 1492 SHA256 dac47abcf0ef7cedc9d5f6a84d6a003d502c0d0ea9945d6e4cabe345936c422a SHA512 419d642faac07ee65d21f4761123a25333f8c34f8ff4aaba15cddd9a74154142fb333e474b137d88c0f70ae27b3a5a689d2d9b527421011d91aed631dc9079fc WHIRLPOOL cc7c9bb2a4941ccf41794cc2349f9fb8221261fbae3abd3fd94725b0883ebd3078f754c2c105221976d373c26c32f24a2881f5ecceaa4bec9bb8dabded6722a4
 EBUILD giflib-4.2.3.ebuild 1371 SHA256 344ef5c60520dd59ac4ae21f6c56d7c9ce32c849e719c10112cb0027fc221cbc SHA512 2839b46ec698ee18fa3d3ef20a06a5dd8ad3f4914c67d1b5f4b9a2882c5fcc72cc1a38a6ff85bc285972fee0714348460b92ca6477ad8e68b96d73336ce29e5c WHIRLPOOL 927d99a618d778a2a66b47e304ddea84f1d33884dbbac024f10b595819f1588eaef334ed62b5b8b8c5d224e8bdfbb546468c5c9ce0d13b51582f03e3d2c23c60
 EBUILD giflib-5.0.4.ebuild 991 SHA256 1ffbcda536f411ebf1058fa10175958f257980e0ae47b580b1295990bcd9893f SHA512 10491dc9d7a76632e97e1cdcdf0d9e85a95e3389c86548a2491bfefd017c610ea69d923db37ddb0d523a202a83eaec787ef03db3b83072387305483545ebd920 WHIRLPOOL 07576ef87feb1d6983ef9736b3870fa21de3d73a5355085dd7d207840a74119b7236846a6751c05cc4bf1baaba50ea0ebd52830de0f887934fba8f0a82c35d66
-MISC ChangeLog 8840 SHA256 3bdd1bdc1cc02b3e09111f5776a39fe3d0e0f1df96628272e146e06ad946a348 SHA512 4ef01b8dfa589586b65c3ac7ca3725a451444614e18d0c4c128c6b9e90fe4e45d022bd08e71806c0c577de0c0bf2bbdf54927ce80c813cd9a94ba3cbff24ff37 WHIRLPOOL 2ac38a3d0addbe29812c4313298d2926ae855296c4291b2be8424f1d90e788f486f6024a3e3c0694c2ec10ca2532e598d30caffd36a69ef790e03aa2820ab6ee
+EBUILD giflib-5.0.5.ebuild 994 SHA256 d07701ab7b70f916be47281298288bb36d65912a34efcb47f7876207e2d4816c SHA512 148c9bf838f35012f3b45944ac716025700d11ac6251cda71f81ea2b0fb8f0fc934b78addd6e5ff3fb7c5c90bbe8d41d57bc08c93c884083b39886249726ab5f WHIRLPOOL 83274aaa6f6bb724423b48f41803552bf2c594aad5cc363dcbf7be5c6beafe0ca01e8945d40a5706c7c1d4b66c604e0841f781bd5712d10b2fcc22f9122ce74c
+MISC ChangeLog 8960 SHA256 03f09c0704f79b111305164127b6d48e5543c35c8c5f6655a5dccdca29cdc97d SHA512 e3b7ba80a1135bf338b941351c4e3f69b6b74143ca066b778d5d99f5e27b6eb156b084bf3fe38639c0643bae94fbba20faf2012c0ec573700e5d729ede6fcd85 WHIRLPOOL 46cea28d4bcdf4768d54167f8a2c5c566d1a541e5fb51ea755253d305147609d8a834fec8e5007b013075828441fac154a3877073281e45324fcc6d6df375635
 MISC metadata.xml 262 SHA256 37a2fa1d7fe15de221a57c2528b6073d06fd6c9da64819e6bb9267b51dde0f2d SHA512 5dd2e307fa1b22920fa9c2aafa105a3a7fe190ff4d2af4da47c400c7e84d820d3ea6108230f763a802e928379083ef2ed854de71978718f3fda39dd43cfddf0c WHIRLPOOL c7f717f63b135da337899c79efef09c11175b7135ac8c482ca44f93a17a8221832e4d569a61f76a159ca4ad9cd3a0b774fa071dfee583df678c7d0847cc42a50
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSYh4EAAoJELEHsLL7fEFWce0QALPtb2wZxoL8tb4vPziLu3tJ
-PTw68ORjCadnO2dqortMCCRRja5TC15gu4gKrH9SKSV3pmk77eG0ZYpLcyJbSq20
-2UEDVIyyziaEHtSu6DJORqnnZQ6hkYqXa9DpYKVUuBP/EzZg8yLNB2FAQw6D0nJC
-8A0JliomMxusLUaT8fzsMr/iB4dO78zaMp8gt2stEH/gzJ2rx0V4MtBbGnnPCSs4
-S3y3EgXIBNh20I9Pscefgv+81FH53WUar/qRikxvcBYvBTPbFtZsd4QuD2qLMqCY
-KO9mkZQpHV3AWVD8D9Rat4/cwgpDUJ9hdmUPh0sUKZnyTPzf0wTAXeZWlrOnKQee
-uglkhlcfpD6pYlti7ejAJo0zwU37pvYSZep/hMMJJfi824ZsZmPO0NkEa9jhhl75
-iDKvx+eQXtwzA/61KdgU4NH6DL5kO1t8CpBu3gcl/10gZSHnnZRnbtnrjHzKs5V7
-y6nbolC7xiBKGNN4L7t9UNyuqhSDgJlaT+cDiYfKVVj6w3vszlmGdFuRy2NfwWP5
-lcrVQoWt+wr5IjCdv5way+cVaSUm+dd1tIsNfYZd58OZJAe/ymOWONv+CphjQQBz
-eQ7IcDBMR7WDvJ8CLfQeEiSePAjlLCu9h+V8C3EJmRBlTcRCZt2ohD4ZSOJLT06f
-7vbMBzYi2RZGfci5htWc
-=57dB
+iQEcBAEBCAAGBQJSfwgtAAoJEEqz6FtPBkyjyGQIAJ9Dm2Wwo4QjIfYJIYYK47XB
+ncs26pCux5JKU1AX+pVUPItG6yPQGX5eV88v3YK7Heyz8w1u0z29whHLRXqfn7PK
+UbbgqEDpq/iV0pW8g8YLOIjnsmdR7KUgu+tCk2ZGlPrkplnak3tsLDmkzzROekhb
+Y0ySD+/oBEKcK+FeS970yZaQAuuMUnz2QpiVxWBpGJI5c5RRhYFmPLXS5m8J/0yI
+2GFYWXBZIvW4Ry3GHil5ju80ZLhAzLyZyVq/KaAp20oE9+IpGyawh2QiVg+twOct
+dZm0T2JxvfKsU6326maULSWMFJ0HdOpifeU8lCYBpSFM85Vk4ZGLcI3UnvXEE+U=
+=d2tv
 -----END PGP SIGNATURE-----
