@@ -1,0 +1,10 @@
+DEFINED_PHASES=configure install prepare
+DESCRIPTION=Library to handle, display and manipulate GIF images
+EAPI=4
+HOMEPAGE=http://sourceforge.net/projects/giflib/
+IUSE=static-libs
+LICENSE=MIT
+SLOT=0
+SRC_URI=mirror://sourceforge/giflib/giflib-5.0.5.tar.bz2
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=4e11048ec37294d53e27ce1504013760
