@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/giflib
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/giflib/ChangeLog,v 1.71 2013/10/19 05:51:56 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/giflib/ChangeLog,v 1.72 2013/11/10 04:14:36 radhermit Exp $
+
+*giflib-5.0.5 (10 Nov 2013)
+
+  10 Nov 2013; Tim Harder <radhermit@gentoo.org> +giflib-5.0.5.ebuild:
+  Version bump.
 
   19 Oct 2013; Mike Frysinger <vapier@gentoo.org> giflib-4.2.3.ebuild:
   Fix building w/automake-1.13 #486542 by Arfrever Frehtes Taifersar Arahesis.
